# pyproject.toml
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "sensitivities"
requires-python = ">=3.10"
description = "Linear and stochastic sensitivity analysis and error propagation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luis Riegger"},
    {email = "lri@me.com"}
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "black",
    "matplotlib"
]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/himbeles/sensitivities"
repository = "https://github.com/himbeles/sensitivities"