# pyproject.toml
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "sensitivities"
requires-python = ">=3.12"
description = "Linear and stochastic sensitivity analysis and error propagation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luis Riegger"},
    {email = "lri@me.com"}
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
    "pytest",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/himbeles/sensitivities"
repository = "https://github.com/himbeles/sensitivities"
